Correccion logo y posiciond e texto

--- a/petrobras/Cube3d.html
+++ b/petrobras/Cube3d.html
@@ -502,38 +502,29 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i56.image.css:image/base/css*/
 #i56 { opacity: 1; }
 /*#/#*//*#i56.i57.positioning.css:positioning/base/css.1*/
-#i56 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 174px;
-        -ms-transform: translate(0, 0) translate(0px, -34px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, -34px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, -34px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, -34px) rotate(0deg);
-}
-/*#/#*//*#i4.i64.image.css:image/base/css*/
-#i64 { opacity: 1;}
-/*#/#*//*#i64.i65.positioning.css:positioning/base/css.1*/
-#i64 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 103px; height: 20px;
-        -ms-transform: translate(0, 0) translate(191px, 199px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(191px, 199px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(191px, 199px) rotate(0deg);
-        transform: translate(0, 0) translate(191px, 199px) rotate(0deg);
+#i56 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 135px;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i128.text.css:text/base/css*/
 #i128 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: PetrobrasSans_Bd; font-size: 24px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i128.i129.positioning.css:positioning/base/css.1*/
 #i128 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 243px; height: 24px;
-        -ms-transform: translate(0, 0) translate(4px, 140px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(4px, 140px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(4px, 140px) rotate(0deg);
-        transform: translate(0, 0) translate(4px, 140px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(4px, 143px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(4px, 143px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(4px, 143px) rotate(0deg);
+        transform: translate(0, 0) translate(4px, 143px) rotate(0deg);
 }
 /*#/#*//*#i4.i130.text.css:text/base/css*/
 #i130 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: PetrobrasSans_Bd; font-size: 14px; color: #000000; font-weight: normal; font-style: italic; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i130.i131.positioning.css:positioning/base/css.1*/
 #i130 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 286px; height: 45px;
-        -ms-transform: translate(0, 0) translate(6px, 164px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(6px, 164px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(6px, 164px) rotate(0deg);
-        transform: translate(0, 0) translate(6px, 164px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(6px, 168px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(6px, 168px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(6px, 168px) rotate(0deg);
+        transform: translate(0, 0) translate(6px, 168px) rotate(0deg);
 }
 /*#/#*//*#i4.i91.shape.css:shape/base/css*/
 #i91 { background-color: #dedede; opacity: 0.00;
@@ -551,10 +542,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i134 { opacity: 1; }
 /*#/#*//*#i134.i135.positioning.css:positioning/base/css.1*/
 #i134 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 286px; height: 24px;
-        -ms-transform: translate(0, 0) translate(6px, 223px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(6px, 223px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(6px, 223px) rotate(0deg);
-        transform: translate(0, 0) translate(6px, 223px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(6px, 219px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(6px, 219px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(6px, 219px) rotate(0deg);
+        transform: translate(0, 0) translate(6px, 219px) rotate(0deg);
 }
 /*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i4 { cursor: pointer; }
@@ -578,29 +569,20 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     }
     
     
-#i58 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 168px;
-        -ms-transform: translate(0, 0) translate(0px, -28px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, -28px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, -28px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, -28px) rotate(0deg);
-}
-/*#/#*//*#i5.i66.image.css:image/base/css*/
-#i66 { opacity: 1;}
-/*#/#*//*#i66.i67.positioning.css:positioning/base/css.1*/
-#i66 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 103px; height: 20px;
-        -ms-transform: translate(0, 0) translate(191px, 199px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(191px, 199px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(191px, 199px) rotate(0deg);
-        transform: translate(0, 0) translate(191px, 199px) rotate(0deg);
+#i58 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 135px;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i5.i124.text.css:text/base/css*/
 #i124 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: PetrobrasSans_Bd; font-size: 24px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i124.i125.positioning.css:positioning/base/css.1*/
 #i124 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 277px; height: 25px;
-        -ms-transform: translate(0, 0) translate(6px, 142px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(6px, 142px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(6px, 142px) rotate(0deg);
-        transform: translate(0, 0) translate(6px, 142px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(6px, 141px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(6px, 141px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(6px, 141px) rotate(0deg);
+        transform: translate(0, 0) translate(6px, 141px) rotate(0deg);
 }
 /*#/#*//*#i5.i126.text.css:text/base/css*/
 #i126 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: PetrobrasSans_Bd; font-size: 14px; color: #000000; font-weight: normal; font-style: italic; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
@@ -735,10 +717,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 
 /*#/#*//*#i126.i127.positioning.css:positioning/base/css.1*/
 #i126 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 288px; height: 44px;
-        -ms-transform: translate(0, 0) translate(6px, 165px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(6px, 165px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(6px, 165px) rotate(0deg);
-        transform: translate(0, 0) translate(6px, 165px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(6px, 167px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(6px, 167px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(6px, 167px) rotate(0deg);
+        transform: translate(0, 0) translate(6px, 167px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
@@ -756,10 +738,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i136 { opacity: 1; }
 /*#/#*//*#i136.i137.positioning.css:positioning/base/css.1*/
 #i136 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 288px; height: 23px;
-        -ms-transform: translate(0, 0) translate(5px, 223px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(5px, 223px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(5px, 223px) rotate(0deg);
-        transform: translate(0, 0) translate(5px, 223px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(5px, 219px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(5px, 219px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(5px, 219px) rotate(0deg);
+        transform: translate(0, 0) translate(5px, 219px) rotate(0deg);
 }
 /*#/#*//*#i52.i53.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i5 { cursor: pointer; }
@@ -776,20 +758,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i6.i60.image.css:image/base/css*/
 #i60 { opacity: 1; }
 /*#/#*//*#i60.i61.positioning.css:positioning/base/css.1*/
-#i60 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 141px;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i6.i118.image.css:image/base/css*/
-#i118 { opacity: 1; }
-/*#/#*//*#i118.i119.positioning.css:positioning/base/css.1*/
-#i118 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 103px; height: 20px;
-        -ms-transform: translate(0, 0) translate(191px, 200px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(191px, 200px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(191px, 200px) rotate(0deg);
-        transform: translate(0, 0) translate(191px, 200px) rotate(0deg);
+#i60 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 138px;
+        -ms-transform: translate(0, 0) translate(0px, -2px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, -2px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, -2px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, -2px) rotate(0deg);
 }
 /*#/#*//*#i6.i120.text.css:text/base/css*/
 #i120 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: PetrobrasSans_Bd; font-size: 24px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
@@ -804,10 +777,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i122 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: PetrobrasSans_Bd; font-size: 14px; color: #000000; font-weight: normal; font-style: italic; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i122.i123.positioning.css:positioning/base/css.1*/
 #i122 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 291px; height: 44px;
-        -ms-transform: translate(0, 0) translate(7px, 166px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(7px, 166px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(7px, 166px) rotate(0deg);
-        transform: translate(0, 0) translate(7px, 166px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(7px, 167px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(7px, 167px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(7px, 167px) rotate(0deg);
+        transform: translate(0, 0) translate(7px, 167px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #dedede; opacity: 0.00;
@@ -825,10 +798,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i138 { opacity: 1; }
 /*#/#*//*#i138.i139.positioning.css:positioning/base/css.1*/
 #i138 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 282px; height: 23px;
-        -ms-transform: translate(0, 0) translate(10px, 225px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(10px, 225px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(10px, 225px) rotate(0deg);
-        transform: translate(0, 0) translate(10px, 225px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(10px, 218px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(10px, 218px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(10px, 218px) rotate(0deg);
+        transform: translate(0, 0) translate(10px, 218px) rotate(0deg);
 }
 /*#/#*//*#i54.i55.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i6 { cursor: pointer; }
@@ -862,9 +835,7 @@ url('fonts/') format('svg');
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i56.image.html:image/html-->
-<img id="i56" src="https://i.imgur.com/sdFFEyD.jpg"/>
-<!--#/#--><!--#i4.i64.image.html:image/html-->
-<img id="i64" src="https://i.imgur.com/FvRVjdT.png"/>
+<img id="i56" src="https://i.imgur.com/6qZAqle.jpg"/>
 <!--#/#--><!--#i4.i128.text.html:text/html-->
 <div id="i128">¡Vive la fiebre tricolor!</div>
 <!--#/#--><!--#i4.i130.text.html:text/html-->
@@ -880,9 +851,7 @@ url('fonts/') format('svg');
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/cjYnOjW.jpg"/>
-<!--#/#--><!--#i5.i66.image.html:image/html-->
-<img id="i66" src="https://i.imgur.com/FvRVjdT.png"/>
+<img id="i58" src="https://i.imgur.com/m50NdkK.jpg"/>
 <!--#/#--><!--#i5.i124.text.html:text/html-->
 <div id="i124">¡Vive la fiebre tricolor!</div>
 <!--#/#--><!--#i5.i126.text.html:text/html-->
@@ -898,9 +867,7 @@ url('fonts/') format('svg');
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/HTEZ4kA.png"/>
-<!--#/#--><!--#i6.i118.image.html:image/html-->
-<img id="i118" src="https://i.imgur.com/FvRVjdT.png"/>
+<img id="i60" src="https://i.imgur.com/q20SUcl.jpg"/>
 <!--#/#--><!--#i6.i120.text.html:text/html-->
 <div id="i120">¡Vive la fiebre tricolor!</div>
 <!--#/#--><!--#i6.i122.text.html:text/html-->
@@ -951,8 +918,6 @@ document.getElementById('i2').addEventListener('showNext', function(e){
 });
 /*#/#*//*#i4.i56.image.js:image/base/js*/
 
-/*#/#*//*#i4.i64.image.js:image/base/js*/
-
 /*#/#*//*#i91.i93.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
@@ -971,8 +936,6 @@ document.getElementById('i4').addEventListener('click', function(e){
 });
 /*#/#*//*#i5.i58.image.js:image/base/js*/
 
-/*#/#*//*#i5.i66.image.js:image/base/js*/
-
 /*#/#*//*#i95.i97.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i95').addEventListener('click', function(e){
@@ -990,8 +953,6 @@ document.getElementById('i5').addEventListener('click', function(e){
 /*#/#*/
 });
 /*#/#*//*#i6.i60.image.js:image/base/js*/
-
-/*#/#*//*#i6.i118.image.js:image/base/js*/
 
 /*#/#*//*#i99.i102.actions.js:actions/base/js*/
 /* Name: On Click; */
@@ -1027,15 +988,10 @@ name: Background;
 /*#/#*//*#i20.i21.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i56.image.meta:image/meta*/
-name: sdFFEyD.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: 6qZAqle.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i56.i57.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":false}/*!*/;
-/*#/#*//*#i4.i64.image.meta:image/meta*/
-name: Logo; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i64.i65.positioning.meta:positioning/meta.1*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i128.text.meta:text/meta*/
 name: ¡Vive la fiebre tricolor!; customName: false;
 /*#/#*//*#i128.i129.positioning.meta:positioning/meta.1*/
@@ -1060,15 +1016,10 @@ name: Background;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i58.image.meta:image/meta*/
-name: cjYnOjW.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: m50NdkK.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i58.i59.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":false}/*!*/;
-/*#/#*//*#i5.i66.image.meta:image/meta*/
-name: FvRVjdT.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i66.i67.positioning.meta:positioning/meta.1*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i124.text.meta:text/meta*/
 name: ¡Vive la fiebre tricolor!; customName: false;
 /*#/#*//*#i124.i125.positioning.meta:positioning/meta.1*/
@@ -1093,15 +1044,10 @@ name: Background;
 /*#/#*//*#i40.i41.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i6.i60.image.meta:image/meta*/
-name: HTEZ4kA.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: q20SUcl.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i60.i61.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":false}/*!*/;
-/*#/#*//*#i6.i118.image.meta:image/meta*/
-name: FvRVjdT.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i118.i119.positioning.meta:positioning/meta.1*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i120.text.meta:text/meta*/
 name: ¡Vive la fiebre tricolor!; customName: false;
 /*#/#*//*#i120.i121.positioning.meta:positioning/meta.1*/
