--- a/petrobras/fade.html
+++ b/petrobras/fade.html
@@ -63,15 +63,15 @@
         }
 
         .PetrobrasFade .bg.cover-1 {
-            background-image: url(https://i.imgur.com/HTEZ4kA.png)
+            background-image: url(https://i.imgur.com/q20SUcl.jpg)
         }
 
         .PetrobrasFade .bg.cover-2 {
-            background-image: url(https://i.imgur.com/90CWF96.jpg)
+            background-image: url(https://i.imgur.com/pDY5rLR.jpg)
         }
 
         .PetrobrasFade .bg.cover-3 {
-            background-image: url(https://i.imgur.com/sdFFEyD.jpg)
+            background-image: url(https://i.imgur.com/6qZAqle.jpg)
         }
 
         .PetrobrasFade .bzm_cover.bzm_pos_tl {
@@ -262,12 +262,10 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"style="margin-top:-18px"> <span style="font-family:'PetrobrasSans_Bd'; color:#000; line-height:100%; font-size:18px">¡Vive la fiebre tricolor!</span></div>
-             <div class="bzm_text" style="margin-top:-10px"> <span style="font-family:'PetrobrasSans_Bd'; color:#000;line-height:100%;font-size:10px;"><i>Compra un mínimo de $30.000 en Petrobras más un valor adicional y adquiere un balón, una gorra y una cantimplora.</i></span></div>
-            <div style="bottom:0px;height: 26px;text-align:right;margin-top:3px;"> 
-              <img src="https://i.imgur.com/FvRVjdT.png" style="height:21px;margin-right:0px;">
-            </div>
-             <div style="bottom:0px;height:25px;text-align:left;margin-top:1px;"> 
+            <div class="bzm_text"style="margin-top:-12px"> <span style="font-family:'PetrobrasSans_Bd'; color:#000; line-height:100%; font-size:18px">¡Vive la fiebre tricolor!</span></div>
+             <div class="bzm_text" style="margin-top:-5px"> <span style="font-family:'PetrobrasSans_Bd'; color:#000;line-height:100%;font-size:10px;"><i>Compra un mínimo de $30.000 en Petrobras más un valor adicional y adquiere un balón, una gorra y una cantimplora.</i></span></div>
+          
+             <div style="bottom:0px;height:25px;text-align:left;margin-top:7px;"> 
               <img src="https://i.imgur.com/tnERmmy.png" style="height:24px;margin-right:0px;">
             </div>
         </a>
