--- a/petrobras/fade.html
+++ b/petrobras/fade.html
@@ -262,8 +262,8 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"style="margin-top:-12px"> <span style="font-family:'PetrobrasSans_Bd'; color:#000; line-height:100%; font-size:18px">¡Vive la fiebre tricolor!</span></div>
-             <div class="bzm_text" style="margin-top:-5px"> <span style="font-family:'PetrobrasSans_Bd'; color:#000;line-height:100%;font-size:10px;"><i>Compra un mínimo de $30.000 en Petrobras más un valor adicional y adquiere un balón, una gorra y una cantimplora.</i></span></div>
+            <div class="bzm_text  bzm_text_bold"style="margin-top:-12px"> <span style="font-family:'PetrobrasSans_Bd'; color:#000; line-height:100%; font-size:21px">¡Vive la fiebre tricolor!</span></div>
+             <div class="bzm_text" style="margin-top:-7px"> <span style="font-family:'PetrobrasSans_Bd'; color:#000;line-height:100%;font-size:15px;"><i>Compra un mínimo de $30.000 en Petrobras más un valor adicional y adquiere un balón, una gorra y una cantimplora.</i></span></div>
           
              <div style="bottom:0px;height:25px;text-align:left;margin-top:7px;"> 
               <img src="https://i.imgur.com/tnERmmy.png" style="height:24px;margin-right:0px;">
