Correcccion de titulo

--- a/LG/BlueCube.html
+++ b/LG/BlueCube.html
@@ -506,11 +506,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i14.text.css:text/base/css*/
 #i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 24px; color: #595959; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
-#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 248px; height: 55px;
-        -ms-transform: translate(-50%, -50%) translate(-11px, 68px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-11px, 68px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-11px, 68px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-11px, 68px) rotate(0deg);
+#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 290px; height: 72px;
+        -ms-transform: translate(-50%, -50%) translate(5px, 69px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(5px, 69px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(5px, 69px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(5px, 69px) rotate(0deg);
 }
 /*#/#*//*#i4.i130.image.css:image/base/css*/
 #i130 { opacity: 1; }
@@ -524,11 +524,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i181.image.css:image/base/css*/
 #i181 { opacity: 1; }
 /*#/#*//*#i181.i182.positioning.css:positioning/base/css.1*/
-#i181 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 82px; height: 39px;
-        -ms-transform: translate(0, 0) translate(206px, 204px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(206px, 204px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(206px, 204px) rotate(0deg);
-        transform: translate(0, 0) translate(206px, 204px) rotate(0deg);
+#i181 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 64px; height: 30px;
+        -ms-transform: translate(0, 0) translate(226px, 213px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(226px, 213px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(226px, 213px) rotate(0deg);
+        transform: translate(0, 0) translate(226px, 213px) rotate(0deg);
 }
 /*#/#*//*#i4.i91.shape.css:shape/base/css*/
 #i91 { background-color: #dedede; opacity: 0.00;
@@ -557,11 +557,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i5.i24.text.css:text/base/css*/
 #i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 24px; color: #666666; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
 /*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
-#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 227px; height: 53px;
-        -ms-transform: translate(-50%, -50%) translate(-11px, 67px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-11px, 67px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-11px, 67px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-11px, 67px) rotate(0deg);
+#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 284px; height: 74px;
+        -ms-transform: translate(-50%, -50%) translate(-2px, 69px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(-2px, 69px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(-2px, 69px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(-2px, 69px) rotate(0deg);
 }
 /*#/#*//*#i5.i185.image.css:image/base/css*/
 #i185 { opacity: 1; }
@@ -695,11 +695,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 
 /*#/#*//*#i185.i186.positioning.css:positioning/base/css.1*/
-#i185 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 82px; height: 39px;
-        -ms-transform: translate(0, 0) translate(206px, 204px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(206px, 204px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(206px, 204px) rotate(0deg);
-        transform: translate(0, 0) translate(206px, 204px) rotate(0deg);
+#i185 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 64px; height: 30px;
+        -ms-transform: translate(0, 0) translate(226px, 213px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(226px, 213px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(226px, 213px) rotate(0deg);
+        transform: translate(0, 0) translate(226px, 213px) rotate(0deg);
 }
 /*#/#*//*#i5.i193.image.css:image/base/css*/
 #i193 { opacity: 1; }
@@ -737,11 +737,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i6.i34.text.css:text/base/css*/
 #i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 24px; color: #5e5e5e; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
 /*#/#*//*#i34.i35.positioning.css:positioning/base/css.1*/
-#i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 251px; height: 55px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 71px) rotate(0deg);
+#i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 286px; height: 75px;
+        -ms-transform: translate(-50%, -50%) translate(4px, 72px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(4px, 72px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(4px, 72px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(4px, 72px) rotate(0deg);
 }
 /*#/#*//*#i6.i60.image.css:image/base/css*/
 #i60 { opacity: 1; }
@@ -755,11 +755,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i6.i187.image.css:image/base/css*/
 #i187 { opacity: 1; }
 /*#/#*//*#i187.i188.positioning.css:positioning/base/css.1*/
-#i187 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 82px; height: 39px;
-        -ms-transform: translate(0, 0) translate(206px, 204px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(206px, 204px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(206px, 204px) rotate(0deg);
-        transform: translate(0, 0) translate(206px, 204px) rotate(0deg);
+#i187 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 64px; height: 30px;
+        -ms-transform: translate(0, 0) translate(226px, 213px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(226px, 213px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(226px, 213px) rotate(0deg);
+        transform: translate(0, 0) translate(226px, 213px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #dedede; opacity: 0.00;
@@ -795,7 +795,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">The TV for the serious watcher!</div>
+<div id="i14">Discover one of LG's most impressive smartphones ever!</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/YokE0GQ.gif"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
@@ -809,7 +809,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
-<div id="i24">The Tv for the serious watcher!</div>
+<div id="i24">Discover one of LG's most impressive smartphones ever!</div>
 <!--#/#--><!--#i5.i185.image.html:image/html-->
 <img id="i185" src="https://i.imgur.com/tI2G7d1.png"/>
 <!--#/#--><!--#i5.i193.image.html:image/html-->
@@ -823,7 +823,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">The TV for the serious watcher!</div>
+<div id="i34">Discover one of LG's most impressive smartphones ever!</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/YokE0GQ.gif"/>
 <!--#/#--><!--#i6.i187.image.html:image/html-->
