--- a/LG/slider.html
+++ b/LG/slider.html
@@ -187,7 +187,7 @@
 </head>
 <body class="AmericanSlide" style="margin:0px;">
 	 <div class="te-container">
-        <a href="https://fisher-price.mattel.com/shop/en-us/fp/72353?_ga=2.54908399.571670796.1527271848-1164650391.1527271848" target="_blank">
+        <a href="http://www.lg.com/us/experience-tvs/premium-tvs" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
                 <div class="te-images"> <img src="https://i.imgur.com/buPw4gH.jpg" alt="" /> <img src="https://i.imgur.com/yvVaaHP.jpg" alt="" /> <img src="https://i.imgur.com/xisG9uQ.jpg" alt="" /> </div>
                 <div class="te-cover"> <img src="https://i.imgur.com/buPw4gH.jpg" alt="" /> </div>
