--- a/LG/slider.html
+++ b/LG/slider.html
@@ -187,7 +187,7 @@
 </head>
 <body class="AmericanSlide" style="margin:0px;">
 	 <div class="te-container">
-        <a href="http://www.lg.com/us/experience-tvs/premium-tvs" target="_blank">
+        <a href="http://www.lg.com/pe" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
                 <div class="te-images"> <img src="https://i.imgur.com/buPw4gH.jpg" alt="" /> <img src="https://i.imgur.com/yvVaaHP.jpg" alt="" /> <img src="https://i.imgur.com/xisG9uQ.jpg" alt="" /> </div>
                 <div class="te-cover"> <img src="https://i.imgur.com/buPw4gH.jpg" alt="" /> </div>
@@ -196,7 +196,7 @@
                     <div class="te-back"></div>
                 </div>
                 <div style="margin-top:-5px; margin-left:0px; margin-right: 10px;">
-                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#606060; font-size:24px; text-align:left;">Discover one LG's most impressive smartphones ever!</span> <img class="logo" src="https://i.imgur.com/tI2G7d1.png" alt=""> </div>
+                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#606060; font-size:21px; text-align:left;">¡Descubre uno de los más impresionantes smartphones de LG!</span> <img class="logo" src="https://i.imgur.com/tI2G7d1.png" alt=""> </div>
                 </div>
                
             </div>
